--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Revision history for Perl extension Net-ISBNDB.
 
+0.11	Wed Sep 13 02:10:32 MDT 2006
+
+	Initial release left changelog files and README out of the manifest.
+
 0.10	Wed Sep 13 01:15:06 MDT 2006
 
 	Initial release.
