--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,31 @@
-Revision history for Perl extension Net-ISBNDB.
+Revision history for Perl extension WebService-ISBNDB.
+
+0.12	Thu Sep 14 03:11:29 MDT 2006
+
+	Moved the lib/Net directory to lib/WebService.
+
+	lib/WebService/ISBNDB/API.pm::
+	lib/WebService/ISBNDB/API/Authors.pm:
+	lib/WebService/ISBNDB/API/Books.pm:
+	lib/WebService/ISBNDB/API/Categories.pm:
+	lib/WebService/ISBNDB/API/Publishers.pm:
+	lib/WebService/ISBNDB/API/Subjects.pm:
+	lib/WebService/ISBNDB/Agent.pm:
+	lib/WebService/ISBNDB/Agent/REST.pm:
+	MANIFEST:
+	Changed all file-references and class-references from Net to
+	WebService.
+
+	t/00_load.t:
+	Changed all file-references and class-references from Net to
+	WebService.
+
+	Build.PL:
+	MANIFEST:
+	MANIFEST.SKIP:
+	Makefile.PL:
+	Changed the build control from ExtUtils::MakeMaker to Module::Build.
+	Put in a compatibility layer for EU::MM.
 
 0.11	Wed Sep 13 02:10:32 MDT 2006
 
