--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,68 @@
-Revision history for Perl extension WebService-ISBNDB.
+Revision history for Perl module WebService-ISBNDB.
+# $Id$
+
+0.30	Wed Oct 11 02:58:55 MDT 2006
+
+	lib/WebService/ISBNDB/API/Books.pm:
+	lib/WebService/ISBNDB/Agent/REST.pm:
+	t/50_books.t:
+	t/Books-isbn=0596002068.xml:
+	Removed explicit specification of "UTC" in str2time calls, since talk
+	with isbndb.com verified that these are already in UTC. Added 'Z'
+	suffix to strings when setting them via set_*_sec methods, to ensure
+	UTC.
+
+	lib/WebService/ISBNDB/Agent.pm:
+	t/07_agent_baseclass.t:
+	Renamed the "agent" attribute to "useragent", and renamed the
+	associated accessors.
+
+	t/DUMMY.pm:
+	Fixed the handling of arguments to make sure that page_number is
+	included and properly handled.
+
+	t/10_categories.t:
+	t/20_publishers.t:
+	t/30_subjects.t:
+	t/40_authors.t:
+	t/50_books.t:
+	It is no longer necessary to test connectivity to isbndb.com before
+	running the tests.
+ 
+	lib/WebService/ISBNDB/Agent/REST.pm:
+	lib/WebService/ISBNDB/Agent.pm:
+	lib/WebService/ISBNDB/Iterator.pm:
+	t/60_iterator.t:
+	t/Authors-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=10-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=11-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=12-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=13-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=14-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=15-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=16-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=17-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=18-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=19-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=2-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=20-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=21-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=22-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=23-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=24-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=25-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=26-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=3-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=4-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=5-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=6-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=7-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=8-person_id=poe_edgar_allan.xml:
+	t/Books-page_number=9-person_id=poe_edgar_allan.xml:
+	t/Books-person_id=poe_edgar_allan.xml:
+	Implementation of an Iterator class, with tests and test data.
+	Integrated into the REST protocol module as the return value from
+	request_all().
 
 0.20	Sun Sep 24 20:45:08 MDT 2006
 
