--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,27 @@
 Revision history for Perl module WebService-ISBNDB.
 # $Id$
 
+0.31	Thu Oct 12 22:27:13 MDT 2006
+
+	Build.PL:
+	lib/WebService/ISBNDB.pm:
+	t/00_load.t:
+	Added a WebService::ISBNDB module. This is an empty module that acts
+	as the version place-holder, both for build numbering and for testing
+	by modules that depend on this package.
+
+	lib/WebService/ISBNDB/API.pm:
+	t/05_api_baseclass.t:
+	Found that creating an API object with an explicit API key argument was
+	ignoring the user argument and using the default all the time. Also
+	created test cases to check this going forward.
+
+	lib/WebService/ISBNDB/API/Books.pm:
+	t/50_books.t:
+	t/Books-book_id=programming_web_services_with_perl.xml:
+	Fixed a bug in which looking up a book (via find()) with the ID instead
+	of the ISBN did not work. Added a unit test for this, as well.
+
 0.30	Wed Oct 11 02:58:55 MDT 2006
 
 	lib/WebService/ISBNDB/API/Books.pm:
